// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Appsettings LogInLayout 1`] = `
<div
  className="log-in-layout"
>
  <div
    className="container"
  >
    <h1>
      Sign in to manage app settings
    </h1>
    <a
      href="https://www.uclapi.com"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        label="Log in"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Components Appsettings SettingsLayout 1`] = `
<div
  className="container splash-parallax vertical-padding undefined"
  style={
    Object {
      "height": "fit-content",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="no-vertical-align"
  >
    <div
      className="row undefined"
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": "auto",
          "marginRight": "auto",
          "marginTop": "50px",
          "width": "90%",
        }
      }
    >
      <h1
        style={
          Object {
            "margin": "20px 0",
            "marginLeft": 0,
            "textAlign": "left",
          }
        }
      >
        Account
      </h1>
      <div
        className="column "
        style={
          Object {
            "margin": 0,
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="uclapi-card uclapi-card-default uclapi-card-shadow"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div
            className="container transparent undefined"
            style={Object {}}
          >
            <div
              className="no-vertical-align"
            >
              <div
                className="row undefined"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "width": "100%",
                  }
                }
              >
                <div
                  className="column-always-inline "
                  style={
                    Object {
                      "margin": 0,
                      "padding": 0,
                      "width": "60%",
                    }
                  }
                >
                  <div
                    className="uclapi-card uclapi-card-transparent"
                    style={
                      Object {
                        "padding": "30px",
                      }
                    }
                  >
                    <h2
                      style={
                        Object {
                          "marginBottom": 0,
                          "marginLeft": 0,
                          "textAlign": "left",
                        }
                      }
                    >
                      
                    </h2>
                    <h4
                      style={
                        Object {
                          "marginBottom": 0,
                          "marginLeft": 0,
                          "textAlign": "left",
                        }
                      }
                    >
                      
                    </h4>
                  </div>
                </div>
                <div
                  className="column-always-inline "
                  style={
                    Object {
                      "margin": 0,
                      "padding": 0,
                      "width": "40%",
                    }
                  }
                >
                  <div
                    className="uclapi-card uclapi-card-transparent"
                    style={
                      Object {
                        "padding": "30px",
                      }
                    }
                  >
                    <a
                      className="uclapi-button default-transition background-color-transition alternate-button "
                      href="/logout"
                      style={
                        Object {
                          "cursor": "pointer",
                          "float": "right",
                          "width": "fit-content",
                        }
                      }
                    >
                      Logout
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <h1
        style={
          Object {
            "margin": "20px 0",
            "marginLeft": 0,
            "textAlign": "left",
          }
        }
      >
        Permissions
      </h1>
      <div
        className="column "
        style={
          Object {
            "margin": 0,
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="uclapi-card uclapi-card-default uclapi-card-shadow"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div
            className="container transparent undefined"
            style={Object {}}
          >
            <div
              className="no-vertical-align"
            >
              <div
                className="row undefined"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginLeft": "auto",
                    "marginRight": "auto",
                    "paddingBottom": 20,
                    "paddingTop": 20,
                    "width": "100%",
                  }
                }
              >
                <div
                  className="column default"
                  style={
                    Object {
                      "width": "50%",
                    }
                  }
                >
                  <div
                    className="image-view"
                    style={
                      Object {
                        "height": "405px",
                        "marginLeft": "auto",
                        "marginRight": "auto",
                        "width": "367px",
                      }
                    }
                  >
                    <img
                      alt="ucl asssitant screen shot"
                      height="405px"
                      src="test-file-stub"
                      style={Object {}}
                      width="367px"
                    />
                  </div>
                </div>
                <div
                  className="column "
                  style={
                    Object {
                      "flexDirection": "column",
                      "width": "50%",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "textAlign": "left",
                      }
                    }
                  >
                    No authorised apps yet. Try UCL Assistant?
                  </h2>
                  <h5
                    style={
                      Object {
                        "textAlign": "left",
                      }
                    }
                  >
                    UCL Assistant is a productivity app for students and staff at UCL. It has been designed by students to be as reliable and user friendly as possible.
                  </h5>
                  <h5
                    style={
                      Object {
                        "textAlign": "left",
                      }
                    }
                  >
                    The app has many different features but one of our favourites is the ability to view your timetable in a weekly view. The app highlights your current commitments to save you time as you rush about University. Check it out below!
                  </h5>
                  <a
                    className="uclapi-button default-transition background-color-transition alternate-button "
                    href="/marketplace/uclassistant"
                    style={
                      Object {
                        "marginLeft": "auto",
                        "marginRight": "auto",
                        "width": "fit-content",
                      }
                    }
                  >
                    Download
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components Dashboard AccordionIcon 1`] = `
<div
  className="accordion-icon"
>
  <svg
    fill="none"
    height="1em"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="6 9 12 15 18 9"
    />
  </svg>
</div>
`;

exports[`Components Dashboard App 1`] = `
<div
  className="rc-collapse"
  role={null}
>
  <div
    className="rc-collapse-item"
  >
    <div
      aria-expanded={false}
      className="rc-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="accordion-icon"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </div>
      sample-project
    </div>
  </div>
</div>
`;

exports[`Components Dashboard Navbar 1`] = `
<div
  className="navbar centered"
>
  <img
    src="test-file-stub"
  />
  <div
    className="logo-text"
  >
    <div>
      UCL API
    </div>
  </div>
</div>
`;

exports[`Pages 404 NotFoundPage 1`] = `<component />`;

exports[`Pages 505 InternalServerErrorPage 1`] = `<component />`;

exports[`Pages AboutPage AboutPage 1`] = `<component />`;

exports[`Pages AppSettings AppSettings 1`] = `<component />`;

exports[`Pages Authorise Authorise 1`] = `<component />`;

exports[`Pages Dashboard Dashboard 1`] = `<component />`;

exports[`Pages Documentation Documentation 1`] = `<component />`;

exports[`Pages Home HomePage 1`] = `<component />`;

exports[`Pages Marketplace Marketplace 1`] = `<component />`;

exports[`Pages Warning Warning 1`] = `<component />`;
